@@ -1,3 +1,8 @@
+2002-11-17  Emmanuel Beffara  <manu@beffara.org>
+
+	* src/__init__.py: Added the processed_sources variable to avoid
+	looping when some source includes itself.
+
 2002-11-14  Emmanuel Beffara  <manu@beffara.org>
 
 	* all: Centralized the definition of _ in the main module to
